# OpenAI-Hack

./: .gitignore  CLAUDE.md  README.md
backend/: .env.complete  .env.example  API_REFERENCE.md  API_TEST.md  BACKEND_ARCHITECTURE.md  COMPOSIO_INTEGRATION.md  RABBITMQ_SETUP.md  README.md  REFACTORING_SUMMARY.md  check_composio_config.py  config.toml  config.toml.example  dump.rdb  pyproject.toml  start_all.sh  start_services.sh  test_auth_config.py  test_complete_flow.py  test_composio.py  test_connection_status.py  test_documents_endpoint.py  test_rabbitmq.py  test_status_endpoint.py  test_thread_api.py
backend/common/: .env  .env.dev
backend/common/config/: __init__.py  config.py
backend/common/db/: redis_pool.py
backend/common/service/: task_agent_service.py
backend/common/type/: __init__.py  agent.py  constant.py  domain.py  sse.py  thread.py
backend/common/utils/: json_utils.py  logger_utils.py  network_utils.py  string_utils.py  template_utils.py
backend/daytona/: Dockerfile  e2b.Dockerfile  e2b.toml  readme.md  startup.sh
backend/daytona/alpine/: Dockerfile  startup.sh
backend/daytona/script/: glob.sh  multi_edit.sh
backend/gateway/: Dockerfile  entrypoint.sh  run.sh
backend/gateway/aws/: appspec-dev.yaml  buildspec.yml  taskdef-dev.json
backend/gateway/controller/: agent_event_stream_controller.py  agent_thread_controller.py  composio_auth_controller.py  composio_docs_controller.py  health_controller.py
backend/gateway/core/: main.py
backend/gateway/service/: agent_event_stream_service.py  agent_thread_service.py  composio_service.py
backend/modem/: Dockerfile  entrypoint.sh  run.sh
backend/modem/aws/: appspec-dev.yaml  buildspec.yml  imagedefinitions.json  taskdef-dev.json
backend/modem/core/: __init__.py  main.py
backend/modem/dev/: app_sync_demo.py
backend/modem/service/: __init__.py  app_sync_service.py
backend/modem/type/: __init__.py  flow_type.py
backend/workflow/: __init__.py
backend/workflow/agent/: agent.py
backend/workflow/core/: controller.py  exceptions.py  logger.py  main.py  message.py
backend/workflow/io/: __init__.py  json.py
backend/workflow/llm/: __init__.py  debug_mixin.py  fn_call_converter.py  (+2 more)
(+105 files in other folders)
