[tool.poetry]
name = "usebase-agent-root"
version = "1.0.0"
description = "Usebase Agent Project"
authors = ["Usebase Engineering Team"]
readme = "README.md"
packages = [
    {include = "workflow"},
    {include = "modem"},
    {include = "gateway"},
    {include = "common"}
]

[tool.poetry.dependencies]
python = ">=3.11,<4"
pydantic = "^2.11.7"
python-dotenv = "1.1.0"
toml = ">=0.10.2,<0.11.0"
colorlog = ">=6.9.0"
arrow = ">=1.3.0"
litellm = "^1.73.6"
pymongo = ">=4.13.1"
motor = ">=3.7.1"
daytona = ">=0.21.0"
fastapi = ">=0.115.12,<0.116.0"
websocket-client = ">=1.8.0,<2.0.0"
celery = "5.5.2"
# Agent dependencies
jinja2 = ">=3.1.6,<4.0.0"
termcolor = ">=3.1.0,<4.0.0"
tenacity = ">=9.1.2,<10.0.0"
json-repair = ">=0.44.1,<0.45.0"
pylcs = ">=0.1.1,<0.2.0"
tree-sitter-python = ">=0.23.6"
langfuse = ">=2.60.3,<3.0.0"
setuptools = ">=80.1.0,<81.0.0"
python-json-logger = ">=3.3.0,<4.0.0"
uvicorn = ">=0.34.2,<0.35.0"
redis = ">=6.0.0"
exa-py = ">=1.13.1"
daytona-sdk = ">=0.18.1"
psycopg = {extras = ["binary", "pool"], version = ">=3.2.9"}
# Modem dependencies
kombu = "5.5.3"
pyopenssl = "25.0.0"
flower = "2.0.1"
watchdog = ">=6.0.0"
# Gateway dependencies
httpx = {extras = ["socks"], version = ">=0.28.1"}
e2b = "1.2.0b6"

[tool.poetry.group.dev.dependencies]
watchdog = ">=6.0.0"
ruff = "0.11.5"
mypy = "1.15.0"
pre-commit = "4.2.0"
build = "*"

[tool.poetry.group.test.dependencies]
pytest = "*"
pytest-cov = "*"
pytest-asyncio = "*"
pytest-forked = "*"
pytest-xdist = "*"
openai = "*"
pandas = "*"
reportlab = "*"
gevent = ">=24.2.1"

[tool.poetry.group.testgeneval.dependencies]
fuzzywuzzy = ">=0.18.0"
rouge = ">=1.0.1"
python-levenshtein = ">=0.26.1,<0.28.0"
tree-sitter-python = ">=0.23.6"

[tool.poetry.scripts]
usebase = "usebase.core.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
concurrency = ["gevent"]

[tool.autopep8]
ignore = [ "E501" ]

[tool.black]
skip-string-normalization = true

[tool.ruff.lint]
select = ["D"]
ignore = ["D1"]

[tool.ruff.lint.pydocstyle]
convention = "google"

